syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/client/packets/pb/service/oidb";

// Group Global Mute
message OidbSvcTrpcTcp0x89A_0 {
  uint32 GroupUin = 1;
  OidbSvcTrpcTcp0x89A_0State State = 2;
}

message OidbSvcTrpcTcp0x89A_0State {
  optional uint32 S = 17;
}

message OidbSvcTrpcTcp0x89A_0Response {
  uint32 GroupUin = 1;
  optional string ErorMsg = 2;
}
